DFR-3745 Dev: Update div-case-maintenance-service (#782)
* Remove spring-boot-starter

* Bump helm chart version

* Bumping chart version/ fixing aliases

* WIP: At the point of refactoring HttpConnectionConfiguration.java

* Corrected gradle dependency for service auth and updated Http class.  Now builds

* update gradlew and gradle.bat

* Fix missing IdamClient issue

* Revert "Fix missing IdamClient issue"

This reverts commit ce7f1a0898105b68249c809880bee3279f604cea.

* update springBoot mainClass

* typo

* revert group

* revert

* revert package change.

* revert spacings

* update checkstyle bit

* remove old checkstyle configurations

* upgrade sonarqube settings and uk.gov.hmcts.java version

* update gradle-wrapper.properties

* update gradle configuration

* Misplacement of tomcat configurations

* Fix jacocoTestReport

* add commons-beanutils and remove puppycrawl

* TEST

* Rename from functional-tests to unit-tests

* revert

* Remove @Autowired

* Test them before tidying up

* Remove ImmutableList and ImmutableMap

* tidy up

* remove unused import

* Remove unused method.

* Resolving quality gate failure

* Remove ImmutableMap

* Remove unused imports

* Remove commented code block

* Remove identical test case

* Remove unassigned variables.

* Remove unused import

* Remove duplicate test case

* Suppress deprecated warnings

* update checkstyle config

* Fix pact failure

* Fix pact again

* Renamed

* Add idam client to CaseMaintenanceServiceApplication

* Revert "Fix pact again"

This reverts commit 8c002f2116f82176fe5905f70e09d6c0060c2ede.

* Revert "Fix pact failure"

This reverts commit 1c7fde65fd7fd3c481f1aff70b783e0acef3659f.

* revert active profile things

* Remove DirtiesContext

* Update dependency org.glassfish:jakarta.el to v4

* Update java to 5.3.0 and use oci

* update

* upgrade tomcat

* update

* update fortify-client version

* update

* Remove nonnull

* suppress CVS-2024-38820

* checkstyle fix

* checkstyle

* checkstyle
