@@ -1,7 +1,5 @@
 package uk.gov.hmcts.reform.divorce.casemaintenanceservice.service.impl;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
@@ -107,7 +105,8 @@ public class PetitionServiceImplUTest {
     public void givenCcdRetrievalServiceReturnsCase_whenRetrievePetition_thenProceedAsExpected() {
         final CaseDetails caseDetails = CaseDetails.builder().build();
 
-        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER)).thenReturn(caseDetails);
+        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER))
+            .thenReturn(caseDetails);
 
         CaseDetails actual = classUnderTest.retrievePetition(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING);
 
@@ -119,7 +118,8 @@ public class PetitionServiceImplUTest {
     public void givenCcdRetrievalServiceReturnsAmendCase_whenRetrievePetition_thenReturnCaseAsDraft() {
         final CaseDetails caseDetails = buildAdulteryCaseData();
 
-        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER)).thenReturn(caseDetails);
+        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER))
+            .thenReturn(caseDetails);
 
         Map<String, Object> expectedCaseData = new HashMap<>();
         expectedCaseData.put(PetitionServiceImpl.IS_DRAFT_KEY, true);
@@ -143,7 +143,8 @@ public class PetitionServiceImplUTest {
         final Draft draft = new Draft("1", Collections.singletonMap("test", "value"), null);
 
         when(draftService.getDraft(TEST_AUTH_TOKEN)).thenReturn(draft);
-        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER)).thenReturn(caseDetails);
+        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER))
+            .thenReturn(caseDetails);
 
         Map<String, Object> expectedCaseData = new HashMap<>();
         expectedCaseData.put(PetitionServiceImpl.IS_DRAFT_KEY, true);
@@ -170,7 +171,8 @@ public class PetitionServiceImplUTest {
         final Draft draft = new Draft("1", amendedDraft, null);
 
         when(draftService.getDraft(TEST_AUTH_TOKEN)).thenReturn(draft);
-        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER)).thenReturn(caseDetails);
+        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER))
+            .thenReturn(caseDetails);
 
         CaseDetails actual = classUnderTest.retrievePetition(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING);
 
@@ -197,8 +199,8 @@ public class PetitionServiceImplUTest {
 
     @Test
     public void givenNoDataInCcdOrDraft_whenRetrievePetition_thenReturnNull() {
-
-        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER)).thenReturn(null);
+        when(ccdRetrievalService.retrieveCase(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING, PETITIONER))
+            .thenReturn(null);
         when(draftService.getDraft(TEST_AUTH_TOKEN)).thenReturn(null);
 
         assertNull(classUnderTest.retrievePetition(TEST_AUTH_TOKEN, PETITIONER_CASE_STATE_GROUPING));
@@ -422,12 +424,12 @@ public class PetitionServiceImplUTest {
     public void givenAmendPetitionDraft_whenRetrieveCase_thenReturnDraft() {
         Map<String, Object> documentMap = new HashMap<>();
         documentMap.put(DivorceSessionProperties.PREVIOUS_CASE_ID, TEST_CASE_ID);
-        Draft draft = buildDraft(ImmutableMap.of(DivorceSessionProperties.PREVIOUS_CASE_ID, TEST_CASE_ID));
+        Draft draft = buildDraft(Map.of(DivorceSessionProperties.PREVIOUS_CASE_ID, TEST_CASE_ID));
         when(draftService.getDraft(TEST_AUTH_TOKEN))
             .thenReturn(draft);
 
         CaseDetails petition = classUnderTest.retrievePetition(TEST_AUTH_TOKEN, RESPONDENT_CASE_STATE_GROUPING);
-        Draft expectedDraft = buildDraft(ImmutableMap.of(
+        Draft expectedDraft = buildDraft(Map.of(
             DivorceSessionProperties.PREVIOUS_CASE_ID, TEST_CASE_ID,
             PetitionServiceImpl.IS_DRAFT_KEY, true
         ));
@@ -516,7 +518,7 @@ public class PetitionServiceImplUTest {
 
         final Map<String, Object> draftData = new HashMap<>();
         draftData.put(DivorceSessionProperties.PREVIOUS_CASE_ID, TEST_CASE_ID);
-        draftData.put(PREVIOUS_REASONS_FOR_DIVORCE_REFUSAL, ImmutableList.of(
+        draftData.put(PREVIOUS_REASONS_FOR_DIVORCE_REFUSAL, List.of(
             TEST_REASON_UNREASONABLE_BEHAVIOUR, TEST_REASON_ADULTERY)
         );
 
@@ -597,7 +599,7 @@ public class PetitionServiceImplUTest {
         caseData.put(D_8_REASON_FOR_DIVORCE, TEST_REASON_ADULTERY);
         // Case Data to be Removed
         caseData.put(D_8_HELP_WITH_FEES_NEED_HELP, YES_VALUE);
-        caseData.put(D_8_CONNECTIONS, ImmutableList.of("A", "B"));
+        caseData.put(D_8_CONNECTIONS, List.of("A", "B"));
 
         final CaseDetails caseDetails = CaseDetails.builder().data(caseData).id(Long.decode(TEST_CASE_ID)).build();
         final Map<String, Object> draftData = new HashMap<>();
@@ -632,7 +634,7 @@ public class PetitionServiceImplUTest {
         caseData.put(REFUSAL_ORDER_REJECTION_REASONS, Collections.singletonList(REJECTION_NO_CRITERIA));
         // Case Data to Keep
         caseData.put(D_8_DIVORCE_WHO, TEST_RELATIONSHIP);
-        caseData.put(D_8_CONNECTIONS, ImmutableList.of("A", "B"));
+        caseData.put(D_8_CONNECTIONS, List.of("A", "B"));
         // Case Data to be Removed
         caseData.put(D_8_HELP_WITH_FEES_NEED_HELP, YES_VALUE);
         caseData.put(D_8_REASON_FOR_DIVORCE, TEST_REASON_ADULTERY);
@@ -663,14 +665,15 @@ public class PetitionServiceImplUTest {
     }
 
     @Test
-    public void whenCreateAmendedPetitionDraftForRefusal_whenCaseIsRejectedForInsufficientDetails_thenProceedAsExpected() {
+    public void
+        whenCreateAmendedPetitionDraftForRefusal_whenCaseIsRejectedForInsufficientDetails_thenProceedAsExpected() {
 
         final Map<String, Object> caseData = new HashMap<>();
         caseData.put(D8_CASE_REFERENCE, TEST_CASE_REF);
         caseData.put(REFUSAL_ORDER_REJECTION_REASONS, Collections.singletonList(REJECTION_INSUFFICIENT_DETAILS));
         // Case Data to Keep
         caseData.put(D_8_DIVORCE_WHO, TEST_RELATIONSHIP);
-        caseData.put(D_8_CONNECTIONS, ImmutableList.of("A", "B"));
+        caseData.put(D_8_CONNECTIONS, List.of("A", "B"));
         // Case Data to be Removed
         caseData.put(D_8_HELP_WITH_FEES_NEED_HELP, YES_VALUE);
         caseData.put(D_8_REASON_FOR_DIVORCE, TEST_REASON_ADULTERY);
@@ -705,7 +708,7 @@ public class PetitionServiceImplUTest {
 
         final Map<String, Object> caseData = new HashMap<>();
         caseData.put(D8_CASE_REFERENCE, TEST_CASE_REF);
-        List<String> refusalRejectionReasons = ImmutableList.of(
+        List<String> refusalRejectionReasons = List.of(
             REJECTION_NO_JURISDICTION, REJECTION_NO_CRITERIA, REJECTION_INSUFFICIENT_DETAILS
         );
         caseData.put(REFUSAL_ORDER_REJECTION_REASONS, refusalRejectionReasons);
@@ -714,7 +717,7 @@ public class PetitionServiceImplUTest {
         // Case Data to be Removed
         caseData.put(D_8_HELP_WITH_FEES_NEED_HELP, YES_VALUE);
         caseData.put(D_8_REASON_FOR_DIVORCE, TEST_REASON_ADULTERY);
-        caseData.put(D_8_CONNECTIONS, ImmutableList.of("A", "B"));
+        caseData.put(D_8_CONNECTIONS, List.of("A", "B"));
 
         final CaseDetails caseDetails = CaseDetails.builder().data(caseData).id(Long.decode(TEST_CASE_ID)).build();
         final Map<String, Object> draftData = new HashMap<>();
@@ -758,7 +761,7 @@ public class PetitionServiceImplUTest {
 
         final Map<String, Object> caseData = new HashMap<>();
         caseData.put(D8_CASE_REFERENCE, TEST_CASE_REF);
-        List<String> refusalRejectionReasons = ImmutableList.of(
+        List<String> refusalRejectionReasons = List.of(
             REJECTION_NO_JURISDICTION, REJECTION_NO_CRITERIA, REJECTION_INSUFFICIENT_DETAILS
         );
         caseData.put(REFUSAL_ORDER_REJECTION_REASONS, refusalRejectionReasons);
@@ -767,13 +770,14 @@ public class PetitionServiceImplUTest {
         // Case Data to be Removed
         caseData.put(D_8_HELP_WITH_FEES_NEED_HELP, YES_VALUE);
         caseData.put(D_8_REASON_FOR_DIVORCE, TEST_REASON_ADULTERY);
-        caseData.put(D_8_CONNECTIONS, ImmutableList.of("A", "B"));
+        caseData.put(D_8_CONNECTIONS, List.of("A", "B"));
 
         final CaseDetails caseDetails = CaseDetails.builder().data(caseData)
             .id(Long.decode(TEST_CASE_ID)).build();
 
         final User user = new User(TEST_AUTH_TOKEN, UserDetails.builder().forename(USER_FIRST_NAME).build());
-        final User caseworkerUser = new User(TEST_AUTHORISATION, UserDetails.builder().forename(USER_FIRST_NAME).build());
+        final User caseworkerUser = new User(TEST_AUTHORISATION, UserDetails.builder().forename(USER_FIRST_NAME)
+            .build());
         when(ccdRetrievalService.retrieveCaseById(TEST_AUTHORISATION, TEST_CASE_ID)).thenReturn(caseDetails);
         when(userService.retrieveUser(TEST_AUTH_TOKEN)).thenReturn(user);
         when(userService.retrieveAnonymousCaseWorkerDetails()).thenReturn(caseworkerUser);
@@ -796,7 +800,8 @@ public class PetitionServiceImplUTest {
     }
 
     private Draft buildDraft(Map<String, Object> properties) {
-        return new Draft(DRAFT_ID, properties, TEST_DRAFT_DOC_TYPE_DIVORCE_FORMAT);
+        return new Draft(DRAFT_ID, properties,
+            TEST_DRAFT_DOC_TYPE_DIVORCE_FORMAT);
     }
 
     private CaseDetails buildAdulteryCaseData() {
@@ -814,7 +819,8 @@ public class PetitionServiceImplUTest {
     }
 
     private Map<String, Object> verifyCcdCaseDataToBeTransformed() {
-        verify(formatterServiceClient).transformToDivorceFormat(ccdCaseDataArgumentCaptor.capture(), eq(TEST_AUTH_TOKEN));
+        verify(formatterServiceClient).transformToDivorceFormat(ccdCaseDataArgumentCaptor.capture(),
+            eq(TEST_AUTH_TOKEN));
         Map<String, Object> ccdCaseDataToBeTransformed = (Map) ccdCaseDataArgumentCaptor.getValue();
         assertThat(ccdCaseDataToBeTransformed, allOf(
             not(hasKey(D8_DOCUMENTS_UPLOADED)),
